# Game-Programming

./: .gitignore  CMakeLists.txt  GameWorld.h  Globals.h  Inputs.cpp  Inputs.h  Position.cpp  Position.h  README.md  Sprite.cpp  Sprite.h  compiling_error.txt  conanfile.txt  main.cpp  setup.cmd
build____/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Globals.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  program.sln  program.vcxproj  program.vcxproj.filters
build____/lib/: program.exp  program.lib
build____/program.dir/Debug/program.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  program.lastbuildstate  program.write.1u.tlog
build____/program.dir/Release/program.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build____/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
build_xxx/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  program.opensdf  program.vcxproj  program.vcxproj.filters
build_xxx/lib/: program.exp  program.lib
build_xxx/program.dir/Debug/program.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  (+5 more)
root/: CMakeLists.txt  setup.cmd
root/source/: main.cpp
root/source/headers/: GameWorld.cpp  GameWorld.h  Input.cpp  Input.h  Position.cpp  Position.h  Sprite.cpp  Sprite.h  globals.h
(+18 files in other folders)
